[gd_scene load_steps=15 format=3 uid="uid://glp73e1wvqq8"]

[ext_resource type="Script" path="res://entities/enemy/space_mine.gd" id="1_fhimk"]
[ext_resource type="AudioStream" uid="uid://ddofjp0mt70pf" path="res://sound/sfx/Explosions/Explosion_8.wav" id="2_egdk7"]
[ext_resource type="Texture2D" uid="uid://cck7wsjxldu6m" path="res://entities/enemy/homing_space_mine.png" id="3_nwtac"]
[ext_resource type="Texture2D" uid="uid://c4865weyxw0ji" path="res://assets/Effects/Explosion.png" id="4_mt7iv"]
[ext_resource type="PackedScene" uid="uid://kx061m0kpeni" path="res://utility/stopwatch.tscn" id="5_gvawt"]
[ext_resource type="PackedScene" uid="uid://d1q1sgwkt8wsv" path="res://entities/health_component.tscn" id="6_iosjc"]
[ext_resource type="PackedScene" uid="uid://b7o6u4xr12hnn" path="res://entities/hitbox_component.tscn" id="7_b30uv"]

[sub_resource type="Animation" id="Animation_4pyvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_nwtac")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xvijc"]
resource_name = "arm"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_nwtac")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_t4qs2"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_mt7iv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hjaro"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.254902), Color(1, 1, 1, 1), Color(1, 1, 1, 0.243137), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h123k"]
_data = {
"RESET": SubResource("Animation_4pyvs"),
"arm": SubResource("Animation_xvijc"),
"explode": SubResource("Animation_t4qs2"),
"hit": SubResource("Animation_hjaro")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0drl"]
size = Vector2(36, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_xtink"]
radius = 278.582

[node name="HomingSpaceMine" type="Node2D" groups=["enemy"]]
position = Vector2(0, -50)
script = ExtResource("1_fhimk")
homing = true
title = "Homing Space Mine"
faces_player = true
explosion_sound = ExtResource("2_egdk7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_nwtac")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h123k")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -6.5)
scale = Vector2(1.6, 2.45)

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Stopwatch" parent="." instance=ExtResource("5_gvawt")]

[node name="HealthComponent" parent="." instance=ExtResource("6_iosjc")]
max_health = 10

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_b30uv")]
collision_layer = 8
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_o0drl")

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 8

[node name="TriggerShape" type="CollisionShape2D" parent="Trigger"]
shape = SubResource("CircleShape2D_xtink")
debug_color = Color(0.937255, 0.12549, 0.54902, 0.419608)

[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
[connection signal="area_entered" from="Trigger" to="." method="_on_trigger_area_entered"]
